// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Get package 1`] = `
┌─────────────────────────┬──────────┬─────────┬───────────┬────────────┬─────────┬───────────────────────────────┐
│ Id                      │ Name     │ Version │ Installed │ Date       │ License │ Tags                          │
├─────────────────────────┼──────────┼─────────┼───────────┼────────────┼─────────┼───────────────────────────────┤
│ surge-synthesizer/surge │ Surge XT │ 1.3.4   │ ✓         │ 2024-08-11 │ gpl-3.0 │ Instrument, Synth, Modulation │
├─────────────────────────┼──────────┼─────────┼───────────┼────────────┼─────────┼───────────────────────────────┤
│ surge-synthesizer/surge │ Surge XT │ 1.3.1   │ ✓         │ 2024-03-02 │ gpl-3.0 │ Instrument, Synth, Modulation │
└─────────────────────────┴──────────┴─────────┴───────────┴────────────┴─────────┴───────────────────────────────┘
`;

exports[`Get package 2`] = `
┌─────────────────────────┬──────────┬─────────┬───────────┬────────────┬─────────┬───────────────────────────────┐
│ Id                      │ Name     │ Version │ Installed │ Date       │ License │ Tags                          │
├─────────────────────────┼──────────┼─────────┼───────────┼────────────┼─────────┼───────────────────────────────┤
│ surge-synthesizer/surge │ Surge XT │ 1.3.1   │ ✓         │ 2024-03-02 │ gpl-3.0 │ Instrument, Synth, Modulation │
└─────────────────────────┴──────────┴─────────┴───────────┴────────────┴─────────┴───────────────────────────────┘
`;

exports[`Get package 3`] = `No results found`;
